# pybind11_minimal_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
src/: main.cpp  operations_mod.cpp
src/pybind11_minimal_project/: __init__.py
